k8s/megacosm-redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: megacosm-redis
spec:
  selector:
    matchLabels:
      app: megacosm-redis
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: megacosm-redis
        tier: backend
    spec:
      containers:
        - name: megacosm-redis
          image: morgajel/megacosm-redis
          ports:
            - name: redis
              containerPort: 6379
