k8s/megacosm-webapp-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: megacosm-webapp
  labels:
    app: webapp
    tier: frontend
spec:
  selector:
    matchLabels:
      app: webapp
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
        tier: frontend
    spec:
      containers:
        - name: megacosm-webapp
          image: morgajel/megacosm-webapp
          ports:
            - containerPort: 8000
              name: http
      restartPolicy: Always
