k8s/megacosm-redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: megacosm-redis
  labels:
    app: redis
    tier: backend
spec:
  ports:
    - port: 6379
      protocol: TCP
  selector:
    app: redis
    tier: backend
