k8s/megacosm-webapp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: megacosm-webapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: megacosm-webapp
          servicePort: 8000
